--- a/08-myproject/CMakeLists.txt
+++ b/08-myproject/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(DemoAPP main.cpp)
 
+# 参照模版文件，在构建目录生成配置文件config.h（这里是用来存储版本号）
 configure_file("config.h.in" "config.h")
 target_include_directories(DemoAPP PUBLIC ${PROJECT_BINARY_DIR})
 
